@@ -17,13 +17,16 @@
 
 apply plugin: 'java-library'
 apply plugin: 'groovy'
-apply plugin: 'maven'
+//apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 artifactId='electricspock-core'
 group='hkhc.electricspock'
 
 //targetCompatibility = '1.7'
 //sourceCompatibility = '1.7'
+
+//test.jvmArgs = ["--illegal-access=permit"]
 
 sourceSets {
     test {
@@ -40,15 +43,38 @@ dependencies {
     testRuntimeOnly files("build/classes/groovy/test")
     testRuntimeOnly files("build/classes/groovy/main")
 
-    api "org.robolectric:robolectric:3.8"
-    api 'org.codehaus.groovy:groovy-all:2.4.13'
-    api "org.spockframework:spock-core:1.1-groovy-2.4"
+    api 'org.robolectric:robolectric:4.11.1'
+    api 'org.codehaus.groovy:groovy-all:3.0.20'
+    api "org.spockframework:spock-core:1.3-groovy-2.6"
 
-    implementation 'org.jetbrains:annotations-java5:15.0'
-    implementation 'org.robolectric:android-all:7.1.0_r7-robolectric-0'
+    api 'org.jetbrains:annotations-java5:15.0'
+//    implementation 'org.robolectric:android-all:10-robolectric-5803371'
+    api 'org.robolectric:android-all:14-robolectric-10818077'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.assertj:assertj-core:1.7.1'
+    testImplementation 'androidx.test:core:1.5.0'
 
 }
 
+publishing {
+    publications {
+        library(MavenPublication) {
+            artifactId='electricspock-core'
+            groupId ='hkhc.electricspock'
+            version = '0.11.4'
+
+            afterEvaluate {
+                from components.java
+            }
+        }
+    }
+
+    repositories {
+        mavenLocal {
+            metadataSources {
+                gradleMetadata()
+            }
+        }
+    }
+}
